apps/tinycloud-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinycloud-demo
  namespace: demo
spec:
  ingressClassName: traefik
  rules:
    - host: app.sasiru.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinycloud-demo
                port:
                  number: 80
